<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/electric_name"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:layout_weight="0.4"
                android:hint="@string/current_value"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:inputType="numberDecimal"
                android:hint="@string/use_total"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/gas_kitchen_name"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/current_value"
                android:layout_weight="0.4"
                android:inputType="numberDecimal"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:hint="@string/use_total"
                android:inputType="numberDecimal"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/gas_kitchen_name2"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/current_value"
                android:layout_weight="0.4"
                android:inputType="numberDecimal"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:inputType="numberDecimal"
                android:hint="@string/use_total"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/gas_guolu_name"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/current_value"
                android:layout_weight="0.4"
                android:inputType="numberDecimal"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:inputType="numberDecimal"
                android:hint="@string/use_total"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/gas_guolu_name2"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/current_value"
                android:layout_weight="0.4"
                android:inputType="numberDecimal"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:inputType="numberDecimal"
                android:hint="@string/use_total"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/water_name"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/current_value"
                android:layout_weight="0.4"
                android:inputType="numberDecimal"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:hint="@string/use_total"
                android:inputType="numberDecimal"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="费用合计"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/current_value"
                android:layout_weight="0.8"
                android:inputType="numberDecimal"
                />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorAccent"
            android:text="@string/exit_app"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>